# KorniaKit

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: conf.py  index.rst
kornia/basic_operations/: flip.py  readimg.py  resize.py
kornia/color_adjustments/: imbright.py  imcontrast.py  imsaturation.py
kornia/edge_detection/: cnn_edgedetection.py  edgedetection.py  linesegments.py  lsdlines.py
kornia/feature_detection/: face_detection.py  gradients.py  houghlines.py
kornia/filtering/: blur.py  unsharp.py
tests/: test_all.py  test_imports.py  test_operations.py
tutorials/: __init__.py  _utils.py  custom_ops.py  pipeline.py
tutorials/basic_operations/: README.md  flip.py  readimg.py  resize.py
tutorials/benchmark/: __init__.py
tutorials/color_adjustments/: README.md  imbright.py  imcontrast.py  imsaturation.py
tutorials/edge_detection/: README.md  cnn_edgedetection.py  edgedetection.py  linesegments.py  lsdlines.py
tutorials/feature_detection/: README.md  face_detection.py  gradients.py  houghlines.py
tutorials/filtering/: README.md  blur.py  unsharp.py
