[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kornia-tutorials"
version = "0.1.0"
description = "Tutorials for computer vision operations using Kornia"
requires-python = ">=3.10"
dependencies = [
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "kornia>=0.6.0",
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
disable_error_code = ["attr-defined"]
